--- a/OC/config.plist
+++ b/OC/config.plist
@@ -245,10 +245,8 @@
 
 </key>
 			<dict>
-				<key>framebuffer-patch-enable	</key>
-				<data>AQAAAA==</data>
-				<key>framebuffer-stolenmem	</key>
-				<data>AAAwAQ==</data>
+				<key>AAPL,ig-platform-id	</key>
+				<data>AwCSPg==</data>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
 			<dict>
