--- a/OC/config.plist
+++ b/OC/config.plist
@@ -246,7 +246,7 @@
 </key>
 			<dict>
 				<key>AAPL,ig-platform-id	</key>
-				<data>AwCRPg==</data>
+				<data>AwCYPg==</data>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
 			<dict>
