Add USB as wake device fix 2

--- a/OC/config.plist
+++ b/OC/config.plist
@@ -66,6 +66,14 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
+				<string>SSDT-USBW.aml</string>
+				<key>Path</key>
+				<string>SSDT-USBW.aml</string>
+				<key>Enabled</key>
+				<true/>
+			</dict>
+			<dict>
+				<key>Comment</key>
 				<string>SSDT-USBX.aml</string>
 				<key>Path</key>
 				<string>SSDT-USBX.aml</string>
@@ -424,6 +432,22 @@
 				<string>Contents/MacOS/SMCSuperIO</string>
 				<key>BundlePath</key>
 				<string>SMCSuperIO.kext</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string></string>
+				<key>MaxKernel</key>
+				<string></string>
+				<key>PlistPath</key>
+				<string>Contents/Info.plist</string>
+				<key>Enabled</key>
+				<true/>
+				<key>MinKernel</key>
+				<string></string>
+				<key>ExecutablePath</key>
+				<string>Contents/MacOS/USBWakeFixup</string>
+				<key>BundlePath</key>
+				<string>USBWakeFixup.kext</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
