--- a/OC/config.plist
+++ b/OC/config.plist
@@ -303,10 +303,8 @@
 
 </key>
 			<dict>
-				<key>AAPL,ig-platform-id	</key>
-				<data>BwCbPg==</data>
-				<key>framebuffer-patch-enable	</key>
-				<data>AQAAAA==</data>
+				<key>AAPL,ig-platform-id</key>
+				<data>AACbPg==</data>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
 			<dict>
@@ -757,7 +755,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 debug=0x100 alcid=3</string>
+				<string>-v keepsyms=1 debug=0x100 alcid=1</string>
 				<key>csr-active-config</key>
 				<data>5wMAAA==</data>
 				<key>prev-lang:kbd</key>
